--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "parcel": "^1.12.4",
     "stylelint": "^13.5.0",
     "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-scss": "^3.17.2"
+    "stylelint-scss": "^3.17.2",
+    "typescript": "^4.8.3"
   },
   "browserslist": [
     "last 2 versions"
